--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,18 @@ on:
     - cron: '0 0 */2 * *'
   workflow_dispatch:
 
+# Add permissions at the workflow level
+permissions:
+  contents: write
+
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
+    
+    # Add permissions at the job level too
+    permissions:
+      contents: write  # Required to create releases
+      packages: write  # Might be needed for some actions
 
     steps:
       # Checkout Nascraft source code
@@ -18,7 +27,7 @@ jobs:
           path: nascraft-source
           fetch-depth: 0
 
-      # Set up JDK 21 and configure Maven to use it
+      # Set up JDK 21
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
@@ -26,18 +35,10 @@ jobs:
           java-version: '21'
           cache: 'maven'
 
-      # Verify Java version
-      - name: Verify Java Version
-        run: |
-          echo "JAVA_HOME = $JAVA_HOME"
-          java -version
-          javac -version
-
-      # Build with Maven using explicit Java 21 settings
+      # Build with Maven
       - name: Build with Maven
         working-directory: ./nascraft-source
         run: |
-          # Override any Java version settings in pom.xml
           mvn -B clean package -DskipTests \
               -Dmaven.compiler.source=21 \
               -Dmaven.compiler.target=21 \
@@ -51,13 +52,13 @@ jobs:
           JAR_PATH=$(find target -name '*.jar' ! -name '*-tests.jar' ! -name 'original-*.jar' | head -1)
           echo "jar_name=${JAR_PATH##*/}" >> $GITHUB_OUTPUT
           echo "jar_path=$PWD/$JAR_PATH" >> $GITHUB_OUTPUT
-          echo "JAR found at: $JAR_PATH"
 
-      # Create release
+      # Create release with proper token handling
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: "build-$(date +'%Y%m%d')"
+          # Use a static tag pattern that won't conflict
+          tag_name: "auto-build-$(date +'%Y%m%d')"
           name: "Auto Build $(date +'%Y-%m-%d')"
           body: |
             Automated build of Nascraft
@@ -69,5 +70,5 @@ jobs:
             ${{ steps.locate-jar.outputs.jar_path }}
           draft: false
           prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Add token explicitly
+          token: ${{ secrets.GITHUB_TOKEN }}
